syntax = "proto3";

package zkpservice;

/*
service Dispatcher {
    rpc Dispatch(Task) returns (Task) {}
    rpc RegisterWorker(WorkerAddress) returns (WorkerRegistrationResponse) {}
}
*/

service ZKPService {
    rpc ProcessTask(Task) returns (Task) {}
    rpc Ping(Message) returns (MessageResponse);
    rpc ComputeProof(ProofData) returns (Message) {}
    rpc GetWorkerStatus(Message) returns (WorkerStatusResponse) {}
    rpc GetComputedProof(Message) returns (ProofStatusResponse) {}
    }


message ProofStatusResponse{
 string status_message = 1;
 int32 status_id = 2; //1 = In progress, 2 = Completed, 3 = Error 
 bytes proof = 3;
}


message WorkerStatusResponse{
 string message = 1;
 bool isbusy = 2;
}


message ProofData{
bytes model_bytes = 1;
string model_input = 2;
}



message Message{
 string message = 1;
}

message MessageResponse{
 string message = 1;
 bool received = 2;
}

/*
message WorkerAddress {
    string address = 1;
}

message WorkerRegistrationResponse {
    bool success = 1;
    string message = 2;
} */

message Task {
    string id = 1;
    string data = 2;
}