syntax = "proto3";


/*
service Dispatcher {
    rpc Dispatch(Task) returns (Task) {}
    rpc RegisterWorker(WorkerAddress) returns (WorkerRegistrationResponse) {}
}
*/
service Worker {
    rpc ProcessTask(Task) returns (Task) {}
    rpc Ping(Message) returns (MessageResponse);
    rpc ComputeProof(ProofInfo) returns (Message) {}
    }

message ProofInfo{
 string model_path = 1;
 bool data_path = 2;
}


message Message{
 string message = 1;
}

message MessageResponse{
 string message = 1;
 bool received = 2;
}

/*
message WorkerAddress {
    string address = 1;
}

message WorkerRegistrationResponse {
    bool success = 1;
    string message = 2;
} */

message Task {
    string id = 1;
    string data = 2;
}